# repub

./: .gitignore  .yarnrc.yml  Cargo.toml  README.md  biome.json  bun.lockb  bundle.mjs  eslint.config.js  manifest.json  next.config.js  next.config.mjs  options.html  package.json  popup.html  prettier.config.js  repub_bind_bg.wasm  styles.css  tsconfig.content.json  tsconfig.json
.github/workflows/: build.yml  node.js.yml  release.yml
bind/: Cargo.toml  LICENSE
bind/src/: lib.rs
components/: button-selection.tsx  checkball.tsx  checkbox-selection.tsx  form-control-label.tsx  left-button-selection.tsx  left-right.tsx  options-page.tsx  radio-selection.tsx  radio.tsx  right.tsx  section.tsx  slider-selection.tsx  static-image.tsx
ext/: manifest.json  package.json  styles.css
ext/components/: button-selection.tsx  radio-selection.tsx  slider-selection.tsx  static-image.tsx
ext/src/: background.ts  capture.ts  options.ts  render.ts  utils.ts
images/: .gitignore
mhtml/: content.js  generator.js
pages/: _app.ts  index.tsx
src/: alter.test.ts  alter.ts  background.ts  capture.ts  cli.ts  content-readability.ts  convert.ts  converter.ts  debug.ts  epub.spec.ts  epub.ts  image.ts  interfaces.ts  iters.test.ts  iters.ts  lib.rs  lib.ts  lock.ts  messages.ts  mhtml.ts  offscreen.ts  options-main.tsx  options.spec.ts  options.test.ts  options.ts  parse.ts  pdf-trim-math.ts  pdf-trim.spec.ts  pdf-trim.ts  pdf.worker.ts  popup.ts  progress.ts  readability.ts  render.ts  status.ts  test_utils.ts  upload.ts  utils.spec.ts  utils.test.ts  utils.ts  (+1 more)
(+3 files in other folders)
