[package]
name = "repub-bind"
version = "0.1.0"
edition = "2021"
description = "the binding between repub-rs and repub"
repository = "https://github.com/hafaio/repub"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
repub = { version = "0.1.0", git = "https://github.com/erikbrinkman/repub-rs", rev = "7444776" }
time = { version = "0.3.17", features = ["wasm-bindgen"] }
uuid = { version = "0.8.2", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.83"

[profile.release]
opt-level = "s"
